# cpp-design-patterns

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/matrix_transform/: factory.hpp  interfaces.hpp  matrix_types.hpp
src/: CMakeLists.txt  config.json  config_cpu.json  config_cuda.json  config_openmp.json  main.cpp
src/matrix_core/: avx2_multiplier.hpp  cpu_multiplier.cpp  cpu_multiplier.hpp  cublas_multiplier.cpp  cublas_multiplier.hpp  cuda_multiplier.cu  cuda_multiplier.hpp  neon_multiplier.cpp  neon_multiplier.hpp  ompavx2_multiplier.cpp  ompavx2_multiplier.hpp  openmp_multiplier.cpp  openmp_multiplier.hpp
src/patterns/: factory.cpp  multiplier_registry.cpp  multiplier_registry.hpp
src/utils/: logger.cpp  logger.hpp
